--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
 		"check": "svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"deploy": "pnpm build && pnpm gh-pages -d build -t true"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.22.3",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.25.1",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@tailwindcss/typography": "^0.5.7",
 		"@vcarl/remark-headings": "^0.0.1",
 		"autoprefixer": "^10.4.7",
@@ -20,6 +23,7 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.3.0",
+		"gh-pages": "^6.3.0",
 		"mdsvex": "^0.10.6",
 		"mdsvex-relative-images": "^1.0.3",
 		"postcss": "^8.4.14",
@@ -29,12 +33,12 @@
 		"rehype-autolink-headings": "^5.1.0",
 		"rehype-slug": "^4.0.1",
 		"remark-reading-time": "^1.0.1",
-		"svelte": "^3.54.0",
+		"svelte": "^4.2.20",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.5",
 		"typescript": "^4.9.4",
 		"unist-util-visit": "^3.1.0",
-		"vite": "^4.0.0"
+		"vite": "^5.4.19"
 	},
 	"type": "module",
 	"dependencies": {
